--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   firebase_auth: ^6.0.0
   flutter_svg: ^2.2.0
+  go_router: ^16.0.0
 
 dev_dependencies:
   flutter_test:
