--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^6.0.0
   flutter_svg: ^2.2.0
   go_router: ^16.0.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
