--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -44,6 +44,10 @@
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
+
+		<key>NSPhotoLibraryUsageDescription</key>
+    <key>NSCameraUsageDescription</key>
+
 	<true/>
 </dict>
 </plist>
