--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.2.0
   go_router: ^16.0.0
   image_picker: ^1.1.2
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
